<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory_white"
    tools:context=".ContactUSActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="34dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Contact Us"
        android:textColor="@color/green"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="520dp"
        android:layout_height="250dp"
        android:background="@drawable/rounded_image"
        android:src="@drawable/doctors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/contactus"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/ivory_white"
        app:cardElevation="10dp"
        android:background="@drawable/green_borders"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_borders"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email: "
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailID"
                    android:textColor="@color/green"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone No: "
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/phoneno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneno"
                    android:textColor="@color/green"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address: "
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/green"
                    android:textSize="20sp"/>
            </LinearLayout>
            <Button
                android:id="@+id/book_an_appointment"
                android:layout_marginTop="20sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_button"
                android:textColor="@color/ivory_white"
                android:text="@string/book_an_appointment"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>